--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/styles.css" />
+    <!-- <link rel="stylesheet" href="css/styles.css" /> -->
+    <link rel="stylesheet" href="css/main.min.css" />
   </head>
   <body>
     <!------- Голова---------------------->
@@ -362,7 +363,7 @@
           </ul>
         </div>
       </section>
-      <!-- Clients___________________________________ -->
+      <!-- Clients___________________sec4________________ -->
 
       <section class="section WS4">
         <div class="container">
