--- a/index.html
+++ b/index.html
@@ -30,31 +30,31 @@
           <p class="logo">Web<span class="logo2">Studio</span></p></a
         >
 
-        <nav class="logonavflex">
-          <ul class="ulstyle">
-            <li class="pod4ekivanie">
-              <a href="index.html" class="TextNAV links">Студія</a>
+        <nav class="navigation">
+          <ul class="navigation__list ulstyle">    
+            <li class="navigation__list-string">
+              <a href="index.html" class="navigation__links ">Студія</a>
             </li>
-            <li class="pod4ekivanie">
-              <a href="portfolio.html" class="TextNAV links"> Портфоліо </a>
+            <li class="navigation__list-string">
+              <a href="portfolio.html" class="navigation__links "> Портфоліо </a>
             </li>
-            <li class="pod4ekivanie">
-              <a href="#adres" class="TextNAV links"> Контакти </a>
+            <li class="navigation__list-string">
+              <a href="#adres" class="navigation__links "> Контакти </a>
             </li>
           </ul>
           <div class="otstup-top">
-            <ul class="logonavflex">
-              <li class="mit ulstyle">
-                <a href="mailto:info@devstudio.com" class="mit mailmargin"
-                  ><svg width="16" height="12" href="" class="special-svg">
+            <ul class="navigation">
+              <li class="navigation__list ulstyle">
+                <a href="mailto:info@devstudio.com" class="navigation__mail-tel mailmargin"
+                  ><svg width="16" height="12" href="" class="navigation__special-svg">
                     <use href="./images/icons.svg#icon-envelope"></use>
                   </svg>
                   info@devstudio.com</a
                 >
               </li>
-              <li class="mit ulstyle">
-                <a href="tel:+380961111111" class="mit"
-                  ><svg width="12" height="16" href="#" class="special-svg">
+              <li class="navigation__list ulstyle">
+                <a href="tel:+380961111111" class="navigation__mail-tel"
+                  ><svg width="12" height="16" href="#" class="navigation__special-svg">
                     <use href="./images/icons.svg#icon-smartphone"></use>
                   </svg>
                   +38 096 111 11 11</a
@@ -72,8 +72,8 @@
       <!-- hero ----------------------->
       <section class="section WS0">
         <div class="container">
-          <h1 class="HERO">Ефективні рішення для вашого бізнесу</h1>
-          <button type="button" class="Hbutton" data-modal-open>
+          <h1 class="section__HERO">Ефективні рішення для вашого бізнесу</h1>
+          <button type="button" class="section__Hbutton" data-modal-open>
             Замовити послугу
           </button>
         </div>
@@ -81,60 +81,60 @@
       <!-- section1---------------------------- -->
       <section class="section WS1">
         <div class="container">
-          <ul class="specials">
-            <li class="special-item">
-              <a href="#" class="special-links">
-                <svg width="70" height="70" href="#" class="special-link-svg">
+          <ul class="section__specials">
+            <li class="section__item">
+              <a href="#" class="section__links">
+                <svg width="70" height="70" href="#" >
                   <use href="./images/icons.svg#icon-antenna-1"></use>
                 </svg>
               </a>
             </li>
-            <li class="special-item">
-              <a href="#" class="special-links">
-                <svg width="70" height="70" href="" class="special-link-svg">
+            <li class="section__item">
+              <a href="#" class="section__links">
+                <svg width="70" height="70" href="" >
                   <use href="./images/icons.svg#icon-clock-1"></use>
                 </svg>
               </a>
             </li>
-            <li class="special-item">
-              <a href="#" class="special-links">
-                <svg width="70" height="70" href="" class="special-link-svg">
+            <li class="section__item">
+              <a href="#" class="section__links">
+                <svg width="70" height="70" href="">
                   <use href="./images/icons.svg#icon-diagram-1"></use>
                 </svg>
               </a>
             </li>
-            <li class="special-item">
-              <a href="#" class="special-links">
-                <svg width="70" height="70" href="" class="special-link-svg">
+            <li class="section__item">
+              <a href="#" class="section__links">
+                <svg width="70" height="70" href="" >
                   <use href="./images/icons.svg#icon-astronaut-1"></use>
                 </svg>
               </a>
             </li>
           </ul>
-          <ul class="ulstyle">
+          <ul class="section__ulstyle">
             <li>
-              <h3 class="WS1h3 WW">Увага до деталей</h3>
-              <p class="WS1P WW">
+              <h3 class="section__WS1h3 WW">Увага до деталей</h3>
+              <p class="section__WS1P WW">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
             <li>
-              <h3 class="WS1h3 WW">Пунктуальність</h3>
-              <p class="WS1P WW">
+              <h3 class="section__WS1h3 WW">Пунктуальність</h3>
+              <p class="section__WS1P WW">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
             <li>
-              <h3 class="WS1h3 WW">Планування</h3>
-              <p class="WS1P WW">
+              <h3 class="section__WS1h3 WW">Планування</h3>
+              <p class="section__WS1P WW">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li>
-              <h3 class="WS1h3">Сучасні технології</h3>
-              <p class="WS1P">
+              <h3 class="section__WS1h3">Сучасні технології</h3>
+              <p class="section__WS1P">
                 Значимість цих проблем настільки очевидна, що реалізація
                 планових завдань.
               </p>
@@ -147,9 +147,9 @@
 
       <section class="section WS2">
         <div class="container">
-          <h2 class="WS2h2">Чим ми займаємося</h2>
-          <ul class="ulstyle">
-            <li class="WW">
+          <h2 class="section__WS2h2">Чим ми займаємося</h2>
+          <ul class="section__ulstyle">
+            <li class="section__WW">
               <div class="sec2position">
                 <img
                   src="images2/11.jpg"
@@ -160,7 +160,7 @@
                 <p class="sec2-text-in">Десктопні додатки</p>
               </div>
             </li>
-            <li class="WW">
+            <li class="section__WW">
               <div class="sec2position">
                 <img
                   src="images2/22.jpg"
@@ -190,43 +190,43 @@
 
       <section class="section WS3">
         <div class="container">
-          <h2 class="WS3h2">Наша команда</h2>
-          <ul class="ulstyle">
-            <li class="WW">
+          <h2 class="section__WS3h2">Наша команда</h2>
+          <ul class="section__ulstyle">
+            <li class="section__WW">
               <img
-                class="imgworkers"
+                class="section__imgworkers"
                 src="images2/44.jpg"
                 alt="Product Designer"
                 width="270"
               />
-              <div class="namesborder">
-                <h3 class="WS3h3">Ігор Дем'яненко</h3>
-                <p class="WS3p">Product Designer</p>
-                <ul class="barbers-soc">
-                  <li class="barbers-soc-items">
-                    <a class="barbers-soc-link" href="#">
-                      <svg width="20" height="20" class="barbers-soc-icon">
+              <div class="section__namesborder">
+                <h3 class="section__WS3h3">Ігор Дем'яненко</h3>
+                <p class="section__WS3p">Product Designer</p>
+                <ul class="section__barbers-info">
+                  <li class="section__barbers-items">
+                    <a class="section__barbers-link" href="#">
+                      <svg width="20" height="20" class="section__barbers-icon">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="barbers-soc-items">
-                    <a class="barbers-soc-link" href="#">
-                      <svg width="20" height="20" class="barbers-soc-icon">
+                  <li class="section__barbers-items">
+                    <a class="section__barbers-link" href="#">
+                      <svg width="20" height="20" class="section__barbers-icon">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="barbers-soc-items">
-                    <a class="barbers-soc-link" href="#">
-                      <svg width="20" height="20" class="barbers-soc-icon">
+                  <li class="section__barbers-items">
+                    <a class="section__barbers-link" href="#">
+                      <svg width="20" height="20" class="section__barbers-icon">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="barbers-soc-items">
-                    <a class="barbers-soc-link" href="#">
-                      <svg width="20" height="20" class="barbers-soc-icon">
+                  <li class="section__barbers-items">
+                    <a class="section__barbers-link" href="#">
+                      <svg width="20" height="20" class="section__barbers-icon">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
@@ -234,41 +234,41 @@
                 </ul>
               </div>
             </li>
-            <li class="WW">
+            <li class="section__WW">
               <img
-                class="imgworkers"
+                class="section__imgworkers"
                 src="images2/55.jpg"
                 alt="Frontend Developer"
                 width="270"
               />
-              <div class="namesborder">
-                <h3 class="WS3h3">Ольга Рєпіна</h3>
-                <p class="WS3p">Frontend Developer</p>
-                <ul class="barbers-soc">
-                  <li class="barbers-soc-items">
-                    <a class="barbers-soc-link" href="#">
-                      <svg width="20" height="20" class="barbers-soc-icon">
+              <div class="section__namesborder">
+                <h3 class="section__WS3h3">Ольга Рєпіна</h3>
+                <p class="section__WS3p">Frontend Developer</p>
+                <ul class="section__barbers-info">
+                  <li class="section__barbers-items">
+                    <a class="section__barbers-link" href="#">
+                      <svg width="20" height="20" class="section__barbers-icon">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="barbers-soc-items">
-                    <a class="barbers-soc-link" href="#">
-                      <svg width="20" height="20" class="barbers-soc-icon">
+                  <li class="section__barbers-items">
+                    <a class="section__barbers-link" href="#">
+                      <svg width="20" height="20" class="section__barbers-icon">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="barbers-soc-items">
-                    <a class="barbers-soc-link" href="#">
-                      <svg width="20" height="20" class="barbers-soc-icon">
+                  <li class="section__barbers-items">
+                    <a class="section__barbers-link" href="#">
+                      <svg width="20" height="20" class="section__barbers-icon">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="barbers-soc-items">
-                    <a class="barbers-soc-link" href="#">
-                      <svg width="20" height="20" class="barbers-soc-icon">
+                  <li class="section__barbers-items">
+                    <a class="section__barbers-link" href="#">
+                      <svg width="20" height="20" class="section__barbers-icon">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
@@ -276,41 +276,41 @@
                 </ul>
               </div>
             </li>
-            <li class="WW">
+            <li class="section__WW">
               <img
-                class="imgworkers"
+                class="section__imgworkers"
                 src="images2/66.jpg"
                 alt="Marketing"
                 width="270"
               />
-              <div class="namesborder">
-                <h3 class="WS3h3">Микола Тарасов</h3>
-                <p class="WS3p">Marketing</p>
-                <ul class="barbers-soc">
-                  <li class="barbers-soc-items">
-                    <a class="barbers-soc-link" href="#">
-                      <svg width="20" height="20" class="barbers-soc-icon">
+              <div class="section__namesborder">
+                <h3 class="section__WS3h3">Микола Тарасов</h3>
+                <p class="section__WS3p">Marketing</p>
+                <ul class="section__barbers-info">
+                  <li class="section__barbers-items">
+                    <a class="section__barbers-link" href="#">
+                      <svg width="20" height="20" class="section__barbers-icon">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="barbers-soc-items">
-                    <a class="barbers-soc-link" href="#">
-                      <svg width="20" height="20" class="barbers-soc-icon">
+                  <li class="section__barbers-items">
+                    <a class="section__barbers-link" href="#">
+                      <svg width="20" height="20" class="section__barbers-icon">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="barbers-soc-items">
-                    <a class="barbers-soc-link" href="#">
-                      <svg width="20" height="20" class="barbers-soc-icon">
+                  <li class="section__barbers-items">
+                    <a class="section__barbers-link" href="#">
+                      <svg width="20" height="20" class="section__barbers-icon">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="barbers-soc-items">
-                    <a class="barbers-soc-link" href="#">
-                      <svg width="20" height="20" class="barbers-soc-icon">
+                  <li class="section__barbers-items">
+                    <a class="section__barbers-link" href="#">
+                      <svg width="20" height="20" class="section__barbers-icon">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
@@ -320,39 +320,39 @@
             </li>
             <li class="border">
               <img
-                class="imgworkers"
+                class="section__imgworkers"
                 src="images2/77.jpg"
                 alt="UI Designer"
                 width="270"
               />
-              <div class="namesborder">
-                <h3 class="WS3h3">Михайло Єрмаков</h3>
-                <p class="WS3p">UI Designer</p>
-                <ul class="barbers-soc">
-                  <li class="barbers-soc-items">
-                    <a class="barbers-soc-link" href="#">
-                      <svg width="20" height="20" class="barbers-soc-icon">
+              <div class="section__namesborder">
+                <h3 class="section__WS3h3">Михайло Єрмаков</h3>
+                <p class="section__WS3p">UI Designer</p>
+                <ul class="section__barbers-info">
+                  <li class="section__barbers-items">
+                    <a class="section__barbers-link" href="#">
+                      <svg width="20" height="20" class="section__barbers-icon">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="barbers-soc-items">
-                    <a class="barbers-soc-link" href="#">
-                      <svg width="20" height="20" class="barbers-soc-icon">
+                  <li class="section__barbers-items">
+                    <a class="section__barbers-link" href="#">
+                      <svg width="20" height="20" class="section__barbers-icon">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="barbers-soc-items">
-                    <a class="barbers-soc-link" href="#">
-                      <svg width="20" height="20" class="barbers-soc-icon">
+                  <li class="section__barbers-items">
+                    <a class="section__barbers-link" href="#">
+                      <svg width="20" height="20" class="section__barbers-icon">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="barbers-soc-items">
-                    <a class="barbers-soc-link" href="#">
-                      <svg width="20" height="20" class="barbers-soc-icon">
+                  <li class="section__barbers-items">
+                    <a class="section__barbers-link" href="#">
+                      <svg width="20" height="20" class="section__barbers-icon">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
                       </svg>
                     </a>
